--- a/app/Resources/views/app.html.twig
+++ b/app/Resources/views/app.html.twig
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="{{ asset('build/global.css') }}">
         <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
         <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
+        <script type="text/javascript" src="{{ only_office_url }}"></script>
     </head>
     <body>
         <div id="app"></div>
