--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -45,7 +45,7 @@ $sesile-color: (
 
 @mixin button-icon ($url-image) {
   background: url($url-image) no-repeat transparent;
-  width: 16em;
+  padding-left: 3em;
   height: 3em;
   text-align: center;
   cursor: pointer;
@@ -831,7 +831,7 @@ $list-group-margin: $global-margin;
 }
 
 .react-autosuggest__input {
-  width: 240px;
+  width: 100%;
   height: 30px;
   padding: 10px 20px;
   font-family: 'Open Sans', sans-serif;
