[Evo] ref #2153 - add descption in basic classeur infos
[Fix] ref #2753 - partial fix

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -953,3 +953,10 @@ label > input {
   z-index: 100;
   background: $white;
 }
+
+.react-datepicker__input-container {
+  input {
+    cursor: pointer;
+    background: #fefefe;
+  }
+}
