--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -32,6 +32,7 @@ $sesile-color: (
 @include foundation-everything(true);
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 @import './../../../../node_modules/react-datepicker/dist/react-datepicker.css';
+@import './../../../../node_modules/react-select/dist/react-select.css';
 
 
 @mixin my-icon ($url-image) {
