[Fix] ref #2606 - Improve list classeurs
- Large area to access in classeur

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -325,6 +325,10 @@ html {
     color: map-get($sesile-color, 'dark-blue');
     font-size:0.875em;
 
+    .classeur-name:hover {
+      color: #ec5935;
+    }
+
     .tri-classeurs {
       color: #87878c;
       font-weight: 700;
