--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -262,6 +262,15 @@ html {
     @include my-icon("../images/ico_comment.png")
   }
 
+  .btn-classeur-action {
+    font-size: 2em;
+    color: darkgrey;
+    line-height: 2em;
+  }
+  .btn-classeur-action:hover {
+    color: grey;
+  }
+
   background-color: #edf2f6;
 
   .actu {
