[Evo] #3125 - Improve user edit
 - Improve display user
 - Integrate UserRole to User global edition
 - Improve endpoint api in user edit
 - Update UserRoleType and UserType
 - #3106 Fix users search
 - #3126 Improve user edit
 - Add confirm delete popup

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -388,6 +388,12 @@ html {
     margin-bottom: 20em;
   }
 
+  .admin-content-details .UserAvatar > div {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
 }
 
 .circuit-list {
