--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -500,6 +500,13 @@ html {
 
   background: $white;
 
+  h2 {
+    color: map-get($sesile-color, 'gray-blue');
+    font-weight: 700;
+    font-size: 1.25em;
+    text-transform: uppercase;
+  }
+
   .bold-info-details-classeur, h3 {
     color: map-get($sesile-color, 'gray-blue');
     font-weight: 700;
