--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -223,6 +223,10 @@ html {
     color: map-get($sesile-color, 'dark-blue');
     font-size:0.875em;
 
+    .dropdown-valign {
+      margin-top: 1em;
+    }
+
     .classeur-name:hover {
       color: #ec5935;
     }
@@ -1018,7 +1022,7 @@ label > input {
 }
 
 .dropdown-confirm-delete {
-  border-radius: 0.4;
+  border-radius: 0.4em;
 }
 
 .documentation-dropzone {
