--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -1,14 +1,3 @@
-$font-path: "foundation-icons/foundation-icons";
-@font-face {
-  font-family: "foundation-icons";
-  src: url("#{$font-path}.eot");
-  src: url("#{$font-path}.eot?#iefix") format("embedded-opentype"),
-  url("#{$font-path}.woff") format("woff"),
-  url("#{$font-path}.ttf") format("truetype"),
-  url("#{$font-path}.svg#fontcustom") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
 
 $foundation-palette: (
     primary: #34a3fc,
@@ -28,10 +17,9 @@ $sesile-color: (
   gray-blue: #404257
 );
 
-@import "./../../../../node_modules/foundation-icons/foundation-icons.scss";
 @import "./../../../../node_modules/foundation-sites/scss/foundation";
 @include foundation-everything(true);
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700');
 @import './../../../../node_modules/react-datepicker/dist/react-datepicker.css';
 @import './../../../../node_modules/react-select/dist/react-select.css';
 @import './../../../../node_modules/font-awesome/scss/font-awesome';
@@ -68,10 +56,12 @@ $sesile-color: (
 }
 
 $font-color-primary: #ffffff;
+$font-family-primary: 'Open Sans', sans-serif;
+$font-family-secondary: 'Raleway', sans-serif;
 $sesile-primary: #fe5e3a;
 
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: $font-family-secondary;
 }
 
 .button {
@@ -103,7 +93,7 @@ html {
   font-family: 'Open Sans', sans-serif;
 
   .sesile-search {
-    height:5.7em;
+    height:4.2em;
     margin: 0;
     border: none;
     box-shadow: none;
@@ -115,19 +105,8 @@ html {
   }
 
   .logo {
-    font-weight: 700;
-    background-color: $sesile-primary;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    .logo-init {
-      font-size: 3em;
-      line-height: 0.8em;
-      color: white;
-    }
-    .logo-name {
-      color: white;
-      font-size: 0.875em;
-      text-transform: uppercase;
+    img {
+      width: 7.5em;
     }
   }
 
@@ -154,33 +133,24 @@ html {
       color: #8a8eab;
     }
 
-    .dropdown-pane {
+    hr {
+      margin: 0;
+    }
 
-      .avatar {
-        width: 2em;
-        height: 2em;
-        line-height:2em;
-      }
+    ul.submenu {
+      margin-top: 0.3em;
+    }
 
-      .user-name {
-        font-weight:700;
-        font-size: 1em;
-        color: map-get($sesile-color, 'gray-blue');
+    a {
+      text-align: left;
+      .fa {
+        color: $secondary-color;
       }
-      .user-mail {
-        font-weight:normal;
-        font-size: 1em;
-        color: #848488;
+      &:hover, &.active, &:active {
+        .fa {
+          color: darken($secondary-color, 25%);
+        }
       }
-      .user-company {
-        font-weight:700;
-        font-size: 1.25em;
-        color: #848488;
-      }
-      .button {
-        margin-bottom:0;
-      }
-
     }
   }
 }
@@ -206,16 +176,36 @@ html {
 
   .badge {
     position: absolute;
-    margin-left: 1.5em;
-    margin-top: -3em;
+    line-height: 1.6em;
+    margin-top: -1em;
   }
 
 }
 
 .main {
   h1 {
-    text-transform: uppercase;
     font-size: 2em;
+    font-family: 'Raleway', sans-serif;
+  }
+  h2 {
+    font-size: 1.5em;
+    font-family: 'Raleway', sans-serif;
+  }
+
+  select, input:not([type="checkbox"]), textarea {
+    background-color: #fff;
+    border-radius: 0.22em;
+    border: 1px solid #ccc;
+    color: #333;
+    height: 2.21em;
+  }
+  .Select-input input {
+    border: none;
+    height: auto;
+  }
+
+  .react-datepicker-wrapper, .react-datepicker__input-container {
+    width: 100%;
   }
 
   .list-classeurs, .list-classeurs a {
@@ -348,7 +338,7 @@ html {
   .panel {
     background-color: #ffffff;
     border-radius: 0.3em;
-    margin-bottom: 5em;
+    margin-bottom: 2em;
     .panel-heading {
       font-weight:700;
       font-size:1em;
@@ -402,6 +392,12 @@ html {
     display: block;
     margin-right: auto;
     margin-left: auto;
+  }
+
+  .note-ico {
+    font-size:1.6em;
+    cursor: pointer;
+    color: $font-color-primary;
   }
 
 }
@@ -950,12 +946,6 @@ label > input {
   appearance: none;
 }
 
-
-.note-ico {
-  font-size:1.6em;
-  cursor: pointer;
-}
-
 .reveal-ico {
   font-size:1.6em;
   cursor: pointer;
@@ -1048,7 +1038,6 @@ label > input {
 .admin_search_input {
   input {
     background-color: #fff;
-    border-color: #d9d9d9 #ccc #b3b3b3;
     border-radius: 0.22em;
     border: 1px solid #ccc;
     color: #333;
