--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -24,37 +24,6 @@ $sesile-color: (
 @import './../../../../node_modules/react-select/dist/react-select.css';
 @import './../../../../node_modules/font-awesome/scss/font-awesome';
 
-
-@mixin my-icon ($url-image) {
-  background: url($url-image) no-repeat transparent;
-  width: 50px;
-  height: 50px;
-  display: block;
-  margin: 0 auto;
-}
-
-@mixin button-icon ($url-image) {
-  background: url($url-image) no-repeat transparent;
-  padding-left: 3em;
-  height: 3em;
-  text-align: center;
-  cursor: pointer;
-}
-
-@mixin my-notification ($bg-color) {
-  background: $bg-color;
-  font-size:0.75em;
-  font-weight:700;
-  width: 2em;
-  height: 2em;
-  border-radius: 2em;
-  display: block;
-  text-align: center;
-  padding-top: 0.2em;
-  margin-left: 2.5em;
-  cursor: pointer;
-}
-
 $font-color-primary: #ffffff;
 $font-family-primary: 'Open Sans', sans-serif;
 $font-family-secondary: 'Raleway', sans-serif;
@@ -269,9 +238,9 @@ html {
 
 
   .fa {
-    color: map-get($sesile-color, 'gray-blue');
     font-size: 1.5em;
     &.fa-comment {
+      color: map-get($sesile-color, 'gray-blue');
       transform: scaleX(-1);
     }
   }
@@ -288,6 +257,14 @@ html {
           color: $sesile-primary;
         }
         color: $sesile-primary;
+      }
+    }
+  }
+
+  .classeur-edit {
+    .button-list {
+      .fa {
+        padding: 0.3em;
       }
     }
   }
@@ -458,8 +435,8 @@ html {
 }
 
 .fa {
-  color: white;
-  width: 1rem; // makes the width of icon labels equal
+  //color: white;
+  //width: 1rem; // makes the width of icon labels equal
 }
 
 .img-avatar {
@@ -504,23 +481,11 @@ html {
 
 .details-classeur {
 
-  background: $white;
-
-  h2 {
+  .bold-info-details-classeur {
     color: map-get($sesile-color, 'gray-blue');
     font-weight: 700;
-    font-size: 1.25em;
+    font-size: 0.875em;
     text-transform: uppercase;
-  }
-
-  .bold-info-details-classeur, h3 {
-    color: map-get($sesile-color, 'gray-blue');
-    font-weight: 700;
-    font-size: 0.75em;
-    text-transform: uppercase;
-  }
-  h3 {
-    margin: 0.5em 0 1em;
   }
 
   .info-details-classeur {
@@ -530,10 +495,15 @@ html {
     text-transform: capitalize;
   }
 
+  .button-list {
+    .fa {
+      padding: 0.3em;
+    }
+  }
+
   .classeur-progress {
-    font-weight: 700;
-    font-size: 0.75em;
-    text-transform: uppercase;
+    font-size: 0.875em;
+    text-transform: capitalize;
   }
 
   .circuit-list {
@@ -785,6 +755,14 @@ $list-group-margin: $global-margin;
 .medium { font-size: 1.6em;}
 .small { font-size: 20px; padding: 0 5px; }
 .text-uppercase{ text-transform: uppercase; }
+
+.grid-margin-bottom {
+  margin-bottom: 2em;
+}
+
+.only-office-height {
+  min-height: 800px;
+}
 
 .admin-details {
   padding: 2em;
