[Evo] #3324 - Improve graphics edit classeur
 - Improve circuit graphics
 - Improve classeur editions rules
 - Improve download PDF buttons
 - Improve download PDF Visa and Signature
 - Add etapeClasseur date validation
 - Improve translation rule

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -173,6 +173,11 @@ html {
     height: auto;
   }
 
+  .document-name hr {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
   .react-datepicker-wrapper, .react-datepicker__input-container {
     width: 100%;
   }
@@ -232,6 +237,9 @@ html {
 
   }
 
+  .text-circuit-center {
+    padding-top: 1.3em;
+  }
 
   .fa {
     font-size: 1.5em;
@@ -507,10 +515,6 @@ html {
     .circuit-add {
       font-size: 1em;
     }
-  }
-
-  .imgPreview {
-    height: 100%;
   }
 
 }
