[Evo] ref #3281 - add loading spinner in button save of documentation

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -1030,3 +1030,6 @@ label > input {
 .pagination .current, .pagination a:hover {
   border-radius: 50%;
 }
+.button[disabled].primary {
+  opacity:0.7;
+}
