--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -12,6 +12,9 @@ $button-palette: map-merge($foundation-palette, (
 )) !default;
 
 $title-color: #797c92;
+$sesile-color-1: #3299CC;
+$sesile-color-2: #CC0066;
+$sesile-color-3: #676766;
 $sesile-color: (
   dark-blue: #4a4c63,
   gray-blue: #404257
@@ -19,18 +22,19 @@ $sesile-color: (
 
 @import "./../../../../node_modules/foundation-sites/scss/foundation";
 @include foundation-everything(true);
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700|Work+Sans:400,700');
 @import './../../../../node_modules/react-datepicker/dist/react-datepicker.css';
 @import './../../../../node_modules/react-select/dist/react-select.css';
 @import './../../../../node_modules/font-awesome/scss/font-awesome';
 
 $font-color-primary: #ffffff;
+$font-family: 'Work Sans', sans-serif;;
 $font-family-primary: 'Open Sans', sans-serif;
 $font-family-secondary: 'Raleway', sans-serif;
 $sesile-primary: #fe5e3a;
 
 html {
-  font-family: $font-family-secondary;
+  font-family: $font-family;
 }
 
 .button {
@@ -57,9 +61,19 @@ html {
 }
 
 .header {
-  background-color: map-get($sesile-color, 'gray-blue');
-  color: $font-color-primary;
-  font-family: 'Open Sans', sans-serif;
+  font-family: $font-family;
+  border-bottom: $sesile-color-1 solid 2px;
+
+  .input-group :first-child {
+    box-shadow: none;
+    border-right: none;
+    border-radius: 0.22em 0 0 0.22em;
+    border-color: $sesile-color-1;
+  }
+
+  .input-group {
+    margin-bottom: 0;
+  }
 
   .sesile-search {
     height:4.2em;
@@ -71,6 +85,22 @@ html {
     font-weight: 700;
     padding-left: 2em;
     background: map-get($sesile-color, 'dark-blue') url("../images/ico_search.png") no-repeat right;
+  }
+
+  .input-group-label {
+    border: 1px solid $sesile-color-1;
+    color: $sesile-color-1;
+    border-left: none;
+    background-color: white;
+    border-radius: 0 0.22em 0.22em 0;
+  }
+
+  select {
+    background-color: #fff;
+    border-radius: 0.22em;
+    border: 1px solid #ccc;
+    color: #333;
+    height: 2.21em;
   }
 
   .logo {
@@ -85,7 +115,6 @@ html {
 
 
   .user-log {
-    font-weight: 700;
     .avatar {
       background-color: #92278f;
       font-size: 2em;
@@ -93,13 +122,17 @@ html {
       width: 1.5em;
       float: right;
     }
-    .user-name {
-      font-size:1em;
+
+    .dropdown.menu a.user-complete-name {
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      font-weight: normal;
+      text-transform: none;
+      font-size: 0.8em;
     }
-    .user-company {
-      text-transform: uppercase;
-      font-size:0.875em;
-      color: #8a8eab;
+
+    .dropdown.menu > li.is-dropdown-submenu-parent > a::after {
+      border: 0;
     }
 
     hr {
@@ -114,6 +147,7 @@ html {
       text-align: left;
       .fa {
         color: $secondary-color;
+        padding-right: 0.3em;
       }
       &:hover, &.active, &:active {
         .fa {
@@ -128,7 +162,7 @@ html {
 .menu-left {
   margin-top:1em;
   margin-bottom:1em;
-  a {
+  li a {
     font-size: 0.75em;
     color: map-get($sesile-color, 'dark-blue');
     .fa {
@@ -154,11 +188,11 @@ html {
 .main {
   h2 {
     font-size: 2em;
-    font-family: 'Raleway', sans-serif;
+    font-family: $font-family;
   }
   h3 {
     font-size: 1.5em;
-    font-family: 'Raleway', sans-serif;
+    font-family: $font-family;
   }
 
   select, input:not([type="checkbox"]), textarea {
@@ -298,7 +332,7 @@ html {
     color: $font-color-primary;
     font-weight:700;
     font-size: 1em;
-    background-color: #34a3fc;
+    background-color: $sesile-color-1;
     h1 {
       font-size: 2em;
       text-transform: uppercase;
@@ -695,6 +729,7 @@ $list-group-margin: $global-margin;
   }
   .list-autocomplete {
     position: absolute;
+    top: 2em;
     width: 100%;
     border-bottom: 1px solid #e6e6e6;
     z-index: 100;
@@ -817,10 +852,14 @@ $list-group-margin: $global-margin;
 
 .app-infos {
   text-align: center;
-  font-size: 0.7em;
+  font-size: 0.55em;
   font-weight: 700;
+  color: map-get($sesile-color, 'dark-blue');
   a {
     color: map-get($sesile-color, 'dark-blue');
+    &:hover, &.active, &:active {
+      color: $sesile-primary;
+    }
   }
 }
 
@@ -832,7 +871,7 @@ $list-group-margin: $global-margin;
   width: 100%;
   height: 30px;
   padding: 0.5em;
-  font-family: 'Open Sans', sans-serif;
+  font-family: $font-family;
   font-weight: 300;
   font-size: 16px;
   border: 1px solid #aaa;
@@ -864,7 +903,7 @@ $list-group-margin: $global-margin;
   width: 280px;
   border: 1px solid #aaa;
   background-color: #fff;
-  font-family: 'Open Sans', sans-serif;
+  font-family: $font-family;
   font-weight: 300;
   font-size: 16px;
   border-bottom-left-radius: 4px;
