--- a/app/Resources/views/app.html.twig
+++ b/app/Resources/views/app.html.twig
@@ -21,6 +21,7 @@
         <meta name="msapplication-TileImage" content="{{ asset('/images/favicons/ms-icon-144x144.png') }}">
         <meta name="theme-color" content="#ffffff">
         <meta name="application-name" content="SESILE">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
         <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
         <script type="text/javascript" src="{{ only_office_url }}"></script>
