[Evo] #1586 - Link to Ozwillo account
 - Add Ozwillo link in config
 - Add Ozwillo color in css
 - Update file display
 - Remove firstname and lastname of user edition
 - Update user admin component
 - Update account, AvatarForm, SignatureForm components
 - Update user api endpoint
 - Update Entity form
 - Improve translations

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -5,6 +5,7 @@ $foundation-palette: (
     success: #39922c,
     warning: #f48c4f,
     alert: #c82d2e,
+    ozwillo: #663399,
 );
 
 $button-palette: map-merge($foundation-palette, (
@@ -1099,4 +1100,9 @@ label > input {
 }
 .button[disabled].primary {
   opacity:0.7;
+}
+
+.image-button {
+  height: 1.5em;
+  margin-right: 1em;
 }
