[Evo] #3486 - Add comments
 - Add date and time in comments

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -467,6 +467,11 @@ html {
   }
 }
 
+.text-date {
+  font-style: italic;
+  font-size: 0.7em;
+  font-weight: normal;
+}
 .text-author {
   font-style: italic;
   font-size: 0.8em;
