[Evo] #3472 - sign user role
 - Add dropdown to choose user role in ClasseursButtonList
 - Add dropdown to choose user role in ClasseursPreview
 - Add user's role in current user endpoint
 - Update function signClasseur in react component
 - Improve translation
 - Improve dropdown display

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -323,6 +323,12 @@ html {
         color: $sesile-primary;
       }
     }
+    .dropdown-pane {
+      width: auto;
+    }
+    li {
+      list-style-type: none;
+    }
   }
 
   .classeur-edit {
@@ -1128,4 +1134,15 @@ label > input {
 }
 .text-capitalize {
   text-transform: capitalize;
+}
+
+.sign-role-list {
+  list-style-type: none;
+
+  li a.button {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    font-size: 0.9em;
+    text-transform: unset;
+  }
 }
