[EVO] ref #3763 add new method in user entity and minor fix on tempaltes

--- a/src/Sesile/MainBundle/Resources/views/Default/errorrestricted.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/errorrestricted.html.twig
@@ -1,6 +1,6 @@
 {% extends "SesileMainBundle:Default:index.html.twig" %}
 
 {% block content %}
-    <p>Vous n'avez pas les droits d'accès à cette page, <a href="{{ path('index') }}">Cliquez ici</a> pour revenir à la
+    <p>Vous n'avez pas les droits d'accès à cette page, <a href="{{ path('sesile_main_default_app') }}">Cliquez ici</a> pour revenir à la
         page d'accueil</p>
 {% endblock %}
