--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -39,7 +39,7 @@
 <div id="maman">
 
     <div id="gauche" class="hidden-xs">
-        <a href="{{ path('index') }}">
+        <a href="{{ path('sesile_main_default_app') }}">
             <div id="logo">
                 <img src="{{ asset("/images/logos.svg") }}"/>
             </div>
