--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -32,7 +32,7 @@ $sesile-color: (
 $label-color: #FFFFFF;
 $label-color-alt: #FFFFFF;
 $label-radius: 0.3em;
-@import url(http://fonts.googleapis.com/css?family=Lato:300,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,700);
 @import "./../../../../node_modules/foundation-sites/scss/foundation";
 @include foundation-everything($prototype: true);
 @import './../../../../node_modules/react-datepicker/dist/react-datepicker.css';
