[Evo] ref #4250 - Improve list migration

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -1339,3 +1339,8 @@ select {
 .text-capitalize-first-letter::first-letter {
   text-transform: uppercase;
 }
+
+.ui.waiting.label {
+  border-color: #c58600;
+  background-color: #f1a100;
+}
